[package]
name = "cft"
version = "0.1.0"
edition = "2018"
description = "Command line tools for cloudformation stacks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
futures = "0.3.8"
rayon = "1.5.1"
rusoto_core = "0.47.0"
rusoto_cloudformation = "0.47.0"
rusoto_logs = "0.47.0"
tokio = { version = "1.12.0", features = ["full"] }
minus = { version = "4.0.2", features = ["static_output"] }
cw_parser = "0.1.3"
colored_json = "2"
colored = "2"
